Layout Container Added with custom font

--- a/src/assets/fonts/fonts.scss
+++ b/src/assets/fonts/fonts.scss
@@ -60,3 +60,10 @@
   font-weight: 900;
   font-style: normal;
 }
+
+@font-face {
+  font-family: 'Dancing';
+  src: url(./DancingScript-SemiBold.ttf) format('truetype');
+  font-weight: 600;
+  font-style: normal;
+}
